CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(AesopOpenPlanner)

IF(NOT CMAKE_BUILD_TYPE)
#	SET(CMAKE_BUILD_TYPE "Debug")
	SET(CMAKE_BUILD_TYPE "Release")
ENDIF(NOT CMAKE_BUILD_TYPE)

IF(WIN32)
	ADD_DEFINITIONS(/D _CRT_SECURE_NO_WARNINGS)
ENDIF(WIN32)

IF(CMAKE_COMPILER_IS_GNUXX)
	SET(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -std=C++0x -Wall")
ENDIF(CMAKE_COMPILER_IS_GNUXX)

ADD_SUBDIRECTORY(Aesop)
ADD_SUBDIRECTORY(AesopDemo)
ADD_SUBDIRECTORY(AesopTest)
