CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(AesopOpenPlanner)

IF(NOT CMAKE_BUILD_TYPE)
#	SET(CMAKE_BUILD_TYPE "Debug")
	SET(CMAKE_BUILD_TYPE "Release")
ENDIF(NOT CMAKE_BUILD_TYPE)

IF(WIN32)
	ADD_DEFINITIONS(/D _CRT_SECURE_NO_WARNINGS)
ENDIF(WIN32)

ADD_SUBDIRECTORY(Aesop)
ADD_SUBDIRECTORY(AesopDemo)
ADD_SUBDIRECTORY(AesopTest)
